# OpticalDesign

./: .gitignore  CMakeLists.txt  CMakeSettings.json  OpticalDesign.sln  README.md
BuildContexA7/: BuildContexA7.vcxproj
Drivers/: BuildDriver.vcxproj  BuildDriver.vcxproj.filters  Driver.vcxproj  Driver.vcxproj.filters  LinuxDriver.props
Drivers/ESP32/: Makefile  Register.h  esp32.c  esp32App.c
Drivers/JY901B/: Makefile  jy901b.c
Drivers/OV5640/: Makefile
Include/Box2DUI/: Box2DUI.vcxproj  Box2DUI.vcxproj.filters  imgui.ini  imgui_impl_glfw.cpp  main.cpp  ngs_hello.cpp  settings.ini
Include/ESP32/: BusConcept.h  Config.h  Defined.h  ESP32.h  ESP32.vcxproj  ESP32.vcxproj.filters  GPIO.h  Grayscale.h  Grayscale.hpp  Gyroscope.h  IIC.h  Motor.h  PCNT.cpp  PCNT.h  PWM.h  PropertySheet.props  Rangefinder.h  Rangefinder.hpp  Register.h  SPI.h  Setting.h  Slave.h  esp32_idf.h
Include/GyroSDKTest/: GyroSDKTest.vcxproj  GyroSDKTest.vcxproj.filters  SDK.cpp  main.cpp
Include/GyroscopeSDK/: Com.cpp  Com.h  Defined.h  GyroscopeSDK.vcxproj  GyroscopeSDK.vcxproj.filters  Register.h  SDK.hpp
Include/NSL/: Config.h  Defined.h  LinuxDriver.props  LinuxHeader.h  NSL.h  NSL.vcxproj  NSL.vcxproj.filters
Include/OpticalDesign/: Brain.h  CVUtil.h  Cerebellum.h  Config.h  Converter.h  DeviceAPI.h  DeviceConfig.h  Devices.h  Eyes.h  Foot.h  GrayscaleLogic.h  LinuxDevice.h  Maze.h  MoveLogic.h  OpticalDesign.vcxproj  Path.h  Screen.hpp  (+4 more)
Linux/drivers/: CMakeLists.txt  drivers.h  test.cpp
Linux/drivers/esp32/: CMakeLists.txt  esp32.c
UnitTest/: UnitTest.vcxproj  test.cpp
(+151 files in other folders)
